--- a/src/app/modules/freelancernav/freelancernav.component.html
+++ b/src/app/modules/freelancernav/freelancernav.component.html
@@ -77,7 +77,8 @@ Wallet          </button>
       <img class="bell" src="../assets/bell.png">
     </div>
     <div class="col-1">
-      <img (click)="hidden()" src="../assets/peerson.png">
+      <img (click)="hidden()" style="width: 51px;"  *ngIf="!User[0].profileUrl"  src="../assets/peerson.png">
+      <img (click)="hidden()"  style="width: 51px;"  *ngIf="User[0].profileUrl"  src={{imageUrl}}{{User[0].profileUrl}}>
     </div>
   </div>
 </div>
@@ -85,19 +86,22 @@ Wallet          </button>
   <div class="prset " *ngIf="hide">
   <div class="kkcrd12">
     <div class="kkcrd text-center">
-        <div class="kkprimg">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg" class="rounded-circle kkprimg img-responsive">
-        </div>
+        <div class="kkprimg" *ngIf="User[0].profileUrl">
+          <img src="{{ imageUrl + User[0].profileUrl }}" class="rounded-circle kkprimg img-responsive">
+      </div>
+      <div class="kkprimg" *ngIf="!User[0].profileUrl">
+          <img src="../assets/Frame 82.png" class="rounded-circle kkprimg img-responsive">
+      </div>
         <div class="kkpname">
-            <p class="kkprname">RamKumar</p>
+            <p class="kkprname">{{User[0].firstName}} {{User[0].lastName}}</p>
             <p class="kkprname1">Freelancer</p>
-            <p class="kkprbtn1" routerLink="/setting/wallet"><span class="material-symbols-outlined">
+            <p class="kkprbtn1" routerLink="/setting/wallet" routerLinkActive="active"><span class="material-symbols-outlined">
               account_balance_wallet
               </span>Wallet</p>
               <p class="kkprbtn1" routerLink="/setting/billing-&-payment"><span class="material-symbols-outlined">
                 settings
                 </span>Settings</p>
-            <button type="button"class="btn kkprbtn2">Logout <span class="material-symbols-outlined">
+            <button type="button"class="btn kkprbtn2" routerLink="/home">Logout <span class="material-symbols-outlined">
                 logout
                 </span></button>
         </div>
