--- a/src/app/modules/freeprofile/freeprofile.component.html
+++ b/src/app/modules/freeprofile/freeprofile.component.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="container-fluid prode" style="cursor: pointer;">
                         <div class="row">
-                            <div class="col-12" routerLink="/profile/education-details" mat-dialog-close>
+                            <div class="col-12" routerLinkActive="active" routerLink="/profile/education-details" mat-dialog-close>
                                 <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png"
                                         alt="Pubkin"><span style="margin-left: 10px;">Education and
                                         Certifications</span> <img class="navarrow" src="../assets/nav arrow down_.png"
